--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"node-sass": "^4.14.1",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
+		"react-input-mask": "^2.0.4",
 		"react-redux": "^7.1.3",
 		"react-sidebar-ui": "^1.2.0",
 		"reactstrap": "^8.4.1",
