--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react-input-mask": "^2.0.4",
 		"react-redux": "^7.1.3",
 		"react-sidebar-ui": "^1.2.0",
+		"react-text-mask": "^5.4.3",
 		"reactstrap": "^8.4.1",
 		"redux": "^4.0.5",
 		"util": "^0.12.3",
