--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"node-sass": "^4.14.1",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
+		"react-infinite-scroll-component": "^5.0.5",
 		"react-input-mask": "^2.0.4",
 		"react-redux": "^7.1.3",
 		"react-sidebar-ui": "^1.2.0",
