--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
 		"node-sass": "^4.14.1",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
+		"react-facebook-login": "^4.1.1",
+		"react-google-login": "^5.1.21",
 		"react-infinite-scroll-component": "^5.0.5",
 		"react-input-mask": "^2.0.4",
 		"react-redux": "^7.1.3",
