--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"next-pwa": "^2.3.3",
 		"next-redux-wrapper": "^4.0.1",
 		"node-sass": "^4.14.1",
+		"nprogress": "^0.2.0",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-facebook-login": "^4.1.1",
