--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@zeit/next-css": "^1.0.1",
 		"@zeit/next-sass": "^1.0.1",
+		"array-move": "^3.0.0",
 		"bootstrap": "^4.4.1",
 		"file-loader": "^2.0.0",
 		"formik": "^2.1.4",
@@ -35,6 +36,7 @@
 		"react-input-mask": "^2.0.4",
 		"react-redux": "^7.1.3",
 		"react-sidebar-ui": "^1.2.0",
+		"react-sortable-hoc": "^1.11.0",
 		"react-text-mask": "^5.4.3",
 		"reactstrap": "^8.4.1",
 		"redux": "^4.0.5",
