--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	"dependencies": {
 		"@zeit/next-css": "^1.0.1",
 		"@zeit/next-sass": "^1.0.1",
+		"antd": "^4.5.3",
+		"antd-img-crop": "^3.9.0",
 		"array-move": "^3.0.0",
 		"bootstrap": "^4.4.1",
 		"file-loader": "^2.0.0",
@@ -29,9 +31,11 @@
 		"node-sass": "^4.14.1",
 		"nprogress": "^0.2.0",
 		"react": "^16.12.0",
+		"react-avatar-editor": "^11.0.7",
 		"react-dom": "^16.12.0",
 		"react-facebook-login": "^4.1.1",
 		"react-google-login": "^5.1.21",
+		"react-image-crop": "^8.6.5",
 		"react-infinite-scroll-component": "^5.0.5",
 		"react-input-mask": "^2.0.4",
 		"react-redux": "^7.1.3",
