--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
 		"js-cookie": "^2.2.1",
 		"mdbreact": "^4.26.0",
 		"moment": "^2.27.0",
-		"next": "^9.5.2",
+		"next": "^9.4.1",
 		"next-connect": "0.6.1",
 		"next-images": "^1.4.0",
-		"next-pwa": "^2.3.3",
+		"next-offline": "^5.0.2",
+		"next-pwa": "^3.1.1",
 		"next-redux-wrapper": "^4.0.1",
 		"node-sass": "^4.14.1",
 		"nprogress": "^0.2.0",
@@ -40,10 +41,12 @@
 		"react-input-mask": "^2.0.4",
 		"react-redux": "^7.1.3",
 		"react-sidebar-ui": "^1.2.0",
+		"react-slick": "^0.27.7",
 		"react-sortable-hoc": "^1.11.0",
 		"react-text-mask": "^5.4.3",
 		"reactstrap": "^8.4.1",
 		"redux": "^4.0.5",
+		"slick-carousel": "^1.8.1",
 		"util": "^0.12.3",
 		"yup": "^0.28.5"
 	},
