--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"prod": "next export"
 	},
 	"dependencies": {
+		"@ant-design/icons": "^4.2.2",
 		"@zeit/next-css": "^1.0.1",
 		"@zeit/next-sass": "^1.0.1",
 		"antd": "^4.5.3",
