--- a/package.json
+++ b/package.json
@@ -52,12 +52,14 @@
 		"yup": "^0.28.5"
 	},
 	"devDependencies": {
+		"@emotion/core": "^10.0.35",
 		"@types/node": "^13.13.4",
 		"@types/react": "^16.9.34",
 		"@types/react-redux": "^7.1.7",
 		"@zeit/next-typescript": "^1.1.1",
 		"prettier": "^2.0.5",
 		"prop-types": "^15.7.2",
+		"react-spinners": "^0.9.0",
 		"redux-thunk": "^2.3.0",
 		"typescript": "^3.8.3"
 	}
