--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"reactstrap": "^8.4.1",
 		"redux": "^4.0.5",
 		"slick-carousel": "^1.8.1",
+		"socket.io-client": "^2.3.0",
 		"util": "^0.12.3",
 		"yup": "^0.28.5"
 	},
